Time: 2 ms (72.32%), Space: 44.8 MB (45.57%) - LeetHub